fix: overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ body {
     min-height: 100vh;
     max-width: 100vw;
     max-height: 100vh;
-    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,7 +50,7 @@ body {
     flex-direction: column;
     gap: 4.8rem;
     border-radius: 4.8rem;
-    box-shadow: 16px 16px 64px #BFBFBF;
+    box-shadow: 1.6rem 1.6rem 6.4rem #BFBFBF;
 }
 
 .stopwatch__time {
